--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "nodemon": "^2.0.4"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "knex": "^0.21.5",
         "sqlite3": "^5.0.0"
